Bug 100573 - Display scrolls when opening Auto Filter
Summary: Display scrolls when opening Auto Filter
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0 target:5.2.0
Keywords: bibisectRequest, regression
: 100568 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-23 23:17 UTC by Robert Gonzalez MX
Modified: 2018-04-10 20:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test file (27.77 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-06-23 23:18 UTC, Robert Gonzalez MX
Details
Screenshots and descriptions (349.33 KB, application/vnd.oasis.opendocument.text)
2016-06-23 23:19 UTC, Robert Gonzalez MX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Gonzalez MX 2016-06-23 23:17:36 UTC
2016 06 23 Display scrolls when opening Auto Filter filter panel 

Problem description:
In a sheet with an Auto Filter applied,  if the currently selected cell is out of the visual display, when opening one of the filters with one click, the filter panel opens but the display scrolls down or right to display the selected cell.

Steps to reproduce:
Open test file provided.
Go to the sheet DATA, select cell C200 with a mouse click.
Go back to the top with the scrolling bars or the scrolling wheel of the mouse.
Open Field3 filter panel with one click.
The filter panel opens but
The display scrolls down to display the selected cell.

Repeat test but select cell AA165 on the right side.
The filter panel does the same.
The display scrolls right to display selected cell.

The filter panel is usable, but when a filtering selection is made, the filter is applied, but the display stays a the currently selected cell, so in some cases, no information is displayed.

The expected behavior is that when the filter drop-down panel opens, no movement should be done, and when the filter is applied, the display should stay at the top.
 

If the selected cell is inside the display area of the screen it will perform ok. If the selected cell is the last partial visible cell, the problem reproduces.
If there is no freeze rows/columns applied, the movement of the display leaves the filter panel alone

This behavior is related to the Pivot Table filters as well, in bug 100568

Tested with LO Version: 5.2.0.1 (RC1)
Build ID: fcbcb4963bda8633ba72bd2108ca1e802aad557d
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
Locale: es-MX (es_MX) on Windows 10

Versión: 5.2.0.0.beta2
Id. de compilación: a83fc06803e11f27e95c809fdfacbbd0377ff7d0
Subprocesos de CPU: 8; Versión de SO: Windows 6.2; Renderizado de IU: predeterminado; 
Configuración regional: es-MX (es_MX)

Version: 5.2.0.0.beta1
Build ID: 1e9933ef611c66bcded94b84052543c78cf1c223
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
Locale: es-MX (es_MX)

Version: 5.2.0.0.alpha1+
Build ID: 13a52d0a718825f82f3d4b1684bf86b812fce1f2
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-05-22_22:59:44
Locale: es-MX (es_MX)


Version: 5.3.0.0.alpha0+
Build ID: 0c1767d9466adf0729eb8e1f43ddb80a31886898
CPU Threads: 8; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-06-21_01:16:33
Locale: es-MX (es_MX) on Windows 10


Works OK in LO Version: 5.1.4.2
Build ID: f99d75f39f1c57ebdd7ffc5f42867c12031db97a
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
Locale: es-MX (es_MX) in Windows 10

and LO Version: 5.0.6.3
Build ID: 490fc03b25318460cfc54456516ea2519c11d1aa
Locale: es-MX (es_MX)
Comment 1 Robert Gonzalez MX 2016-06-23 23:18:40 UTC
Created attachment 125873 [details]
Test file
Comment 2 Robert Gonzalez MX 2016-06-23 23:19:21 UTC
Created attachment 125874 [details]
Screenshots and descriptions
Comment 3 Aron Budea 2016-06-26 05:11:47 UTC
Reproduced in 5.2.0.1, not reproduced in 5.1.4.2. => regression
Also reproduced in 5.2.0.1/Ubuntu 15.10.
Comment 4 Niklas Johansson 2016-06-29 08:30:54 UTC
Did a bibisect with the following result:

niklas@niklas-loBibisect:~/lo-linux-dbgutil-daily-till52$ git bisect bad 939f9b29ccca7022abb952d63d237462126621c4 is the first bad commit
commit 939f9b29ccca7022abb952d63d237462126621c4
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Tue Jan 12 05:35:56 2016 +0100

    2016-01-12: source-hash-56534cb1271562fa26faabda6a7257bec43a8c00

:100644 100644 d047c34186964d12aeac1b3299502023d2d1ead1 7da343729e07aeb32315858d67b1e380860d75a9 M	build-info.txt
:040000 040000 d94686b1c24fe867f31d6e773e6fe43bd261ff54 be197161d4ecd53feae8bc87c6b7007b29b5d1ac M	opt


niklas@niklas-loBibisect:~/lo-linux-dbgutil-daily-till52$ git bisect log
# bad: [d3acb9dfa21e2597d0affe3f04fe18b2022b9026] 2016-05-26: source-hash-a042951ad4db2b84021e1d43361511dec998ce82
# good: [69eedb44a433e3be69137a83238a4184785c752f] 2015-11-25: source-hash-7289a140fc68dc898ba2b2357cc960968195f236
git bisect start 'd3acb9dfa21e2597d0affe3f04fe18b2022b9026' '69eedb44a433e3be69137a83238a4184785c752f'
# bad: [7d1c6fda154836547542c6d741f34a158dd1102c] 2016-02-24: source-hash-f84b8c03462238b821724b7f504ad141c83fcf8f
git bisect bad 7d1c6fda154836547542c6d741f34a158dd1102c
# good: [6dd89e633720c3f49a4f6eae79311db185759525] 2016-01-09: source-hash-85ac3cd63f6720ff2d3c4b7491f4ad296219fa53
git bisect good 6dd89e633720c3f49a4f6eae79311db185759525
# bad: [9415db92637eab212d53121eee45628ea653e97d] 2016-02-01: source-hash-749c5a08016a0384686caab7528f3c8adc51fdc6
git bisect bad 9415db92637eab212d53121eee45628ea653e97d
# bad: [0142721e2f6b487e6d23dd8195f887ce051cc489] 2016-01-20: source-hash-b4f60e1c7c68a6e2a8b295aeffb85573b61ad045
git bisect bad 0142721e2f6b487e6d23dd8195f887ce051cc489
# bad: [7cd1333b9a4e8adf048bcea0824ccd82b9a791be] 2016-01-14: source-hash-2496c497b6ffe9c69370ccc12bb103099c877165
git bisect bad 7cd1333b9a4e8adf048bcea0824ccd82b9a791be
# good: [775bfe0f19d9ef22912c389b7268c8cf9fdd7f30] 2016-01-11: source-hash-9e5fb97292d6f3ed74f4ee71772a0457f2b3d46f
git bisect good 775bfe0f19d9ef22912c389b7268c8cf9fdd7f30
# bad: [b79c4fcfcf6208cf4790d24f3a1444b813406625] 2016-01-13: source-hash-a84cae5735a91e3c1e03dfed58bdf7c03500a53a
git bisect bad b79c4fcfcf6208cf4790d24f3a1444b813406625
# bad: [939f9b29ccca7022abb952d63d237462126621c4] 2016-01-12: source-hash-56534cb1271562fa26faabda6a7257bec43a8c00
git bisect bad 939f9b29ccca7022abb952d63d237462126621c4
# first bad commit: [939f9b29ccca7022abb952d63d237462126621c4] 2016-01-12: source-hash-56534cb1271562fa26faabda6a7257bec43a8c00
Comment 5 Niklas Johansson 2016-06-29 13:55:58 UTC
It seems that the fix for "tdf#46637 - Make partially visible cells fully visible on mouse click" caused this regression.
Comment 6 Caolán McNamara 2016-07-11 15:20:36 UTC
*** Bug 100568 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2016-07-11 15:27:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=829dc5ddc53bf0c8e371dd5dd32a7edbf24cdbbf

Resolves: tdf#100573 revert original attempt to resolves tdf#46637

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2016-07-11 15:27:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=19694ee33b6605e0b881392ad98eeec164ea770c

Related: tdf#100573 try a different approach to solving tdf#46637

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2016-07-11 15:34:49 UTC
split this into reverting the original code and that's in the queue for 5-2 and 5-2-0 in gerrit then a follow up fix which is an attempt to restore the intent of the original fix which I'm not 100% confident is safe for 5-2, but it does seem to work fine.
Comment 10 Commit Notification 2016-07-11 18:42:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9bf8a970176b16d6bbd00199fd1d9ba6e73b35b5&h=libreoffice-5-2

Resolves: tdf#100573 revert original attempt to resolves tdf#46637

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-07-15 15:40:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e58c1e63f7d0e272065e787bd000b11615e9266b&h=libreoffice-5-2-0

Resolves: tdf#100573 revert original attempt to resolves tdf#46637

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.