Resolves: tdf#100573 revert original attempt to resolves tdf#46637

Revert "tdf#46637 - Make partially visible cells fully visible on mouse click"

this can be safely backported to 5-2 series as a standalone revert

This reverts commit 08f6107edf3021c31571769e45f7c4b5267d6924.

(cherry picked from commit 829dc5ddc53bf0c8e371dd5dd32a7edbf24cdbbf)

Change-Id: I08838aee18a31fee2f7c50eb63bff01714429e62